# Python-DC

./: README.md  pyproject.toml
src/: dependency_parser.py  entities.py  main.py  report.py  vulnerability_mapper.py
